# mcp-shodan

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: ci.yml  pypi-publish.yml
src/mcp_shodan/: __init__.py  __main__.py  client.py
tests/: conftest.py  test_client.py
